compress and throttle speed all pages, add jivosite all pages

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -555,6 +555,17 @@ progress[value]::-webkit-progress-value
 	height: 100%
 	justify-content: flex-start
 
+.localcontacts2
+	margin-top: 30px
+
+.localcontacts__adress-inner
+	margin-bottom: 20px
+	b
+		display: block
+		padding-bottom: 5px
+
+.localcontacts__top-discription--nomar
+	margin-bottom: 30px
 
 .sticky-button
 	position: fixed
