check all forms for required inputs and this commit before global changes still work great))

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -567,6 +567,10 @@ progress[value]::-webkit-progress-value
 .localcontacts__top-discription--nomar
 	margin-bottom: 30px
 
+.post-content
+	img
+		margin: 20px auto
+
 .sticky-button
 	position: fixed
 	z-index: 10
