new photos for 120, 150 m2 houses

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -782,7 +782,26 @@ progress[value]::-webkit-progress-value
 
 
 
-
+.fancybox-thumbs
+	top: auto
+	width: auto
+	bottom: 0
+	left: 0
+	right: 0
+	height: 110px
+	padding: 10px 10px 5px 10px
+	box-sizing: border-box
+	background: rgba(0, 0, 0, 0.3)
+.fancybox-thumbs__list
+	margin: 0 auto
+	a
+		width: 130px
+		height: 95px
+		&::before
+			border: 5px solid $yellow
+.fancybox-show-thumbs .fancybox-inner
+	right: 0
+	bottom: 110px
 
 
 
