new styles for index.html

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -244,7 +244,7 @@
 	justify-content: center
 	h2
 		text-align: center
-		color: #fff
+		color: #000
 		font-size: 30px
 		margin: 0
 		text-transform: uppercase
@@ -455,10 +455,13 @@
 			text-align: center
 			color: #ffffff
 
-.title-page .align-elem
-	margin: 0
-	h2.tac
-		text-align: center
+.title-page
+	h2.align-elem
+		color: #000
+	.align-elem
+		margin: 0
+		h2.tac
+			text-align: center
 
 .title-page .blocklist-25 .header
 	justify-content: center
@@ -802,6 +805,10 @@ progress[value]::-webkit-progress-value
 .fancybox-show-thumbs .fancybox-inner
 	right: 0
 	bottom: 110px
+.title-page
+	.bordered-image
+		border: 10px solid $yellow
+		margin: 25px auto
 
 
 
