edit styles, make more light and white all

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -23,9 +23,6 @@
 .spoiler
 	display: none
 
-.gray-bg
-	background: #f7f7f7!important
-
 .items-block
 	display: grid
 	grid-template-columns: repeat(4, 1fr)
@@ -190,7 +187,7 @@
 		display: flex
 
 .title-page .block-6.houses-page-top
-	background: url("../img_header.jpg") bottom no-repeat
+	background: url("../img/houses-top-image.jpg") top no-repeat
 	background-size: cover
 
 .block-19
