edit index maybe))

--- a/app/title.styles.css
+++ b/app/title.styles.css
@@ -782,7 +782,7 @@ html.title-page{
   box-sizing: border-box;
   height: 16px;
   width: 40px;
-  background: url("elephone.png") left 50% top 50% / 18px no-repeat;
+  background: url("telephone.png") left 50% top 50% / 18px no-repeat;
   background-color: #333;
   margin-right: 20px;
   min-height: 40px;
