--- a/app/title.styles.css
+++ b/app/title.styles.css
@@ -438,16 +438,11 @@ html.title-page{
   text-align: center;
   width: 1200px;
   min-height: 450px;
-  display: -webkit-flex;
   display: flex;
   background: #ccc;
   overflow: hidden;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
   justify-content: center;
   max-width: 100%;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
   border-radius: 5px;
   right: auto;
 }
@@ -2479,21 +2474,19 @@ html.title-page{
 }
 .title-page .editable_block-29 .text {
   box-sizing: border-box;
-  display: -webkit-flex;
   display: flex;
   text-align: left;
   pointer-events: auto;
-  -webkit-justify-content: flex-start;
-  -moz-justify-content: flex-start;
   justify-content: flex-start;
   font-family: Montserrat, sans-serif;
   color: #000;
   text-decoration: none;
   font-size: 14px;
   line-height: 1.6;
-  -webkit-align-items: flex-start;
-  -moz-align-items: flex-start;
   align-items: flex-start;
+}
+.title-page .editable_block-29 .text .align-elem {
+  font-weight: 500;
 }
 .title-page .editable_block-29 .price {
   box-sizing: border-box;
@@ -2539,17 +2532,17 @@ html.title-page{
   height: 0;
   min-height: 14px;
   font-family: Montserrat, sans-serif;
-  color: #000;
+  color: #fff;
   text-decoration: none;
-  font-size: 15px;
-  background: transparent;
+  font-size: 16px;
+  background: #ffae00;
   border-radius: 2px;
   font-weight: 600;
   transition: all .25s ease;
 }
 .title-page .editable_block-29 .more > a:hover, .title-page .editable_block-29 .more > a.hover, .title-page .editable_block-29 .more > a.active {
-  background: #ffae00;
-  color: #fff;
+  background: transparent;
+  color: #000;
 }
 .title-page .editable_block-29 .image a {
   box-sizing: border-box;
@@ -7668,7 +7661,7 @@ html.title-page{
   box-sizing: border-box;
   width: auto;
   min-height: 0;
-  font-size: 25px;
+  font-size: 27px;
   right: 0;
 }
 .title-page .site-name-3 .sn-wrap {
@@ -7824,7 +7817,7 @@ html.title-page{
   text-align: right;
   font-family: Montserrat, sans-serif;
   color: #fff;
-  text-decoration: underline;
+  text-decoration: none;
   justify-content: flex-end;
   font-size: 18px;
   font-weight: 600;
@@ -7833,6 +7826,7 @@ html.title-page{
   align-items: flex-start;
   width: 315px;
   margin-left: auto;
+  transition: .25s ease;
 }
 .title-page .email-14 .text_body:hover, .title-page .email-14 .text_body.hover, .title-page .email-14 .text_body.active {
   color: #ffae00;
