--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -340,6 +340,7 @@
 .title-page b span, .title-page strong span
 	text-transform: uppercase
 	color: #3c3939
+	font-size: 18px
 
 #map
 	width: 100%
