more compress, fix index page top phone

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -960,6 +960,9 @@ progress[value]::-webkit-progress-value
 		img
 			max-width: 100%
 
+// .title-page a:active, .title-page a:hover
+// 	color: #ffae00
+
 .d-none
 	display: none
 
