--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -336,8 +336,9 @@
 
 .title-page.houses-page .widget-5.head-button
 	background: #ffae00
+	transition: .25s ease
 	&:hover
-		background: transparent
+		background: rgba(255,174,0,.2)
 
 .houses-page-top .send-mail
 	// padding: 3px
