--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -977,8 +977,10 @@ progress[value]::-webkit-progress-value
 .gallery-block
 	margin: 120px 0
 
-// .title-page a:active, .title-page a:hover
-// 	color: #ffae00
+.h2
+	font-size: 26px
+	font-weight: 500
+	margin-bottom: 20px
 
 .d-none
 	display: none
