--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,4 +1,4 @@
-@import "../libs/OwlCarousel2/dist/assets/owl.carousel.min.css"
+// @import "../libs/OwlCarousel2/dist/assets/owl.carousel.min.css"
 @import "../libs/fancybox/jquery.fancybox.min.css"
 @import "../libs/magnific-popup/dist/magnific-popup.css"
 @import "../libs/fontawesome/font-awesome.min"
