--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1035,6 +1035,14 @@ progress[value]::-webkit-progress-value
 	isplay: block
 	eight: auto
 
+.video-blocks
+	display: grid
+	grid-template-columns: repeat(2, 1fr)
+	grid-gap: 40px
+	.video-block
+		h2.next-h
+			font-size: 20px!important
+
 .d-none
 	display: none
 
