--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -237,6 +237,13 @@
 			h3
 				font-size: 20px
 
+	.video-blocks
+		grid-template-columns: auto
+		grid-gap: 10px
+		.video-block
+			h2.next-h
+				font-size: 20px!important
+
 
 
 
