--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1059,6 +1059,13 @@ progress[value]::-webkit-progress-value
 		h2.next-h
 			font-size: 20px!important
 
+.content-52 h3 a
+	font-weight: 700
+	text-decoration: none
+	text-transform: uppercase
+	font-size: 18px
+	transition: $time
+
 .d-none
 	display: none
 
