--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -66,12 +66,23 @@
 		width: 576px
 
 	.sticky-button
-		width: 50px
-		height: 50px
-		bottom: 100px
+		width: 45px
+		height: 45px
 		right: 7%
+		&.phone
+			bottom: 100px
+		&.instagram
+			display: block
+			bottom: 160px
 		svg
-			width: 30px
+			width: 28px
+
+	.title-page .blocklist-23 .item-outer
+		height: 450px
+	
+	.tabs
+		.tab-btns
+			bottom: 70px
 
 
 
@@ -244,6 +255,15 @@
 			h2.next-h
 				font-size: 20px!important
 
+	.title-page .blocklist-23 .item
+		height: 325px
+
+	.title-page .blocklist-23 .item-outer
+		height: 350px
+	
+	.tabs
+		.tab-btns
+			bottom: 40px
 
 
 
