--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -69,6 +69,18 @@
 		width: 45px
 		height: 45px
 		right: 7%
+		&.sticky-block
+			right: auto
+			left: 6%
+			bottom: 30px
+			width: 45px
+			height: 170px
+			.circle-phone
+				a
+					img
+						max-width: 28px
+					&:not(:last-child)
+						margin-bottom: 7px
 		&.phone
 			bottom: 100px
 		&.instagram
