--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -83,9 +83,9 @@
 						margin-bottom: 7px
 		&.phone
 			bottom: 100px
-		&.instagram
-			display: block
-			bottom: 160px
+		// &.instagram
+		// 	display: block
+		// 	bottom: 160px
 		svg
 			width: 28px
 
@@ -95,6 +95,15 @@
 	.tabs
 		.tab-btns
 			bottom: 70px
+
+	.text-popup-window
+		.link-block
+			grid-template-columns: repeat(2, 1fr)
+			grid-auto-flow: inherit
+			grid-gap: 25px
+
+	.form
+		padding: 45px 25px 30px 25px
 
 
 
