--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -116,7 +116,7 @@
 		grid-template-columns: auto
 		grid-auto-flow: column
 		margin-bottom: 45px
-		a
+		div
 			display: flex
 			flex-direction: column
 			align-items: center
@@ -127,9 +127,6 @@
 				text-align: center
 				transition: $time
 				margin: 7px 0 0
-			&:hover
-				p
-					color: #ffae00
 	h3
 		font-size: 26px
 		text-align: left
