add new page VDK

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -407,7 +407,7 @@
 	height: 450px
 	position: relative
 
-#map-sales
+#map-sales, #map-sales-vdk
 	width: 100%
 	height: 450px
 	position: relative
