add new buttons for change city

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1155,6 +1155,32 @@ progress[value]::-webkit-progress-value
 	height: 383px
 
 
+.title-page
+	.choose-city
+		margin-bottom: 50px
+		h3
+			font-size: 30px
+			text-align: center
+		.button-block
+			max-width: 750px
+			margin: 0 auto
+			display: grid
+			grid-gap: 25px
+			grid-template-columns: repeat(2, 1fr)
+			.widget-5
+				margin: 0!important
+				span
+					transition: .25s ease
+					font-size: 18px
+				&.hovered
+					background: rgba(255,174,0,.2)
+					span
+						color: #000
+				&:hover
+					span
+						color: #000
+
+
 
 
 
