--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -113,6 +113,8 @@
 
 //Small: ≥576px
 @media (max-width: 480px)
+	.container
+		width: 100%
 
 	.items-block
 		grid-template-columns: repeat(1, 1fr)
@@ -285,6 +287,19 @@
 	.tabs
 		.tab-btns
 			bottom: 40px
+
+	.title-page
+		.choose-city
+			margin-bottom: 50px
+			h3
+				font-size: 22px
+				text-align: center
+			.button-block
+				max-width: 750px
+				margin: 0 auto
+				display: grid
+				grid-gap: 15px
+				grid-template-columns: auto
 
 
 
