add new houses & table with prices

--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,3 +1,4 @@
 @import "_mixins/font-face"
 
 +font-face("roboto-g", "../fonts/RobotoRegular/RobotoRegular", 400)
++font-face("arial-g", "../fonts/ArialMT/ArialMT", 400)
