--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -293,13 +293,19 @@
 			margin-bottom: 50px
 			h3
 				font-size: 22px
-				text-align: center
 			.button-block
-				max-width: 750px
-				margin: 0 auto
-				display: grid
 				grid-gap: 15px
 				grid-template-columns: auto
+
+	.form
+		&.choose-land
+			max-width: 100%
+			padding: 45px 10px
+			font-size: 11px
+			.choose-land-table
+				td,th
+					padding: 3px
+
 
 
 
