add 2 new pages

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -934,6 +934,10 @@ progress[value]::-webkit-progress-value
 
 
 
+.text-commercial
+	margin-top: 50px
+
+
 .fancybox-thumbs
 	top: auto
 	width: auto
